--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <canvas id="my-canvas" width="600" height="400"></canvas>
 
     <!-- splashscreen -->
-    <div id="splashscreen" class="container">
+    <div id="splash-screen" class="container">
         <img src="images/logo (1).png" width="500" alt="logo">
         <button id="start-btn">PLAY!</button>
     </div>
