--- a/index.html
+++ b/index.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Air Plane Hunt</title>
-    <link rel="stylesheet" href="./styles/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
+  <body>
     <div class="container">
+      <!-- gamescreen -->
+      <canvas id="my-canvas" width="600" height="400"></canvas>
 
-    <!-- gamescreen -->
-    <canvas id="my-canvas" width="600" height="400"></canvas>
-
-    <!-- splashscreen -->
-    <div id="splash-screen" class="container">
-        <img src="images/logo (1).png" width="500" alt="logo">
+      <!-- splashscreen -->
+      <div id="splash-screen" class="container">
+        <img src="images/logo (1).png" width="500" alt="logo" />
         <button id="start-btn">PLAY!</button>
-    </div>
+      </div>
 
-    <!-- gameoverscreen -->
-    <div id="gameover-screen" class="container">
-        <img src="./images/game_over_PNG15.png" width="500" alt="logo">
+      <!-- gameoverscreen -->
+      <div id="gameover-screen" class="container">
+        <img src="./images/game_over_PNG15.png" width="500" alt="logo" />
         <button id="restart-btn">PLAY AGAIN!</button>
-    </div>
-
-
+      </div>
     </div>
 
     <script src="./javascript/main.js"></script>
     <script src="./javascript/Game.js"></script>
-    
-</body>
+    <script src="./javascript/Torreta.js"></script>
+  </body>
 </html>
