add aircraft print

--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
     <script src="./javascript/main.js"></script>
     <script src="./javascript/Game.js"></script>
     <script src="./javascript/Torreta.js"></script>
+    <script src="./javascript/Aircraft.js"></script>
   </body>
 </html>
