draw y move de una sola bala

--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
     <script src="./javascript/Game.js"></script>
     <script src="./javascript/Torreta.js"></script>
     <script src="./javascript/Aircraft.js"></script>
+    <script src="./javascript/Bullet.js"></script>
+    
   </body>
 </html>
